  https://sourceforge.net/p/omegat/feature-requests/1364/

  - Upgrade to LanguageTool 3.6
  https://sourceforge.net/p/omegat/feature-requests/1299/

  - Improve TBX parsing
  https://sourceforge.net/p/omegat/feature-requests/1268/

  - Support SRX format

  - Support M1/M2 Mac natively and distribute with Arm64 JRE.

  - Distribution with Linux aarch64 JRE


  Bug fixes:

  - OmegaT 6.1 with JRE does not work out of the box on Windows
  https://sourceforge.net/p/omegat/bugs/1218/

  - Broken gradle tasks on Debian
  https://sourceforge.net/p/omegat/bugs/1217/

  - Selection of match for pre-translation varies through different OS's
  https://sourceforge.net/p/omegat/bugs/1213/

  - Critical errors are logged, but no longer shown to the user
  https://sourceforge.net/p/omegat/bugs/1207/

  - Google2 Translate MT connector failed to parse response
  https://sourceforge.net/p/omegat/bugs/1206/

  - linux-install.sh script not aware of its location
  https://sourceforge.net/p/omegat/bugs/1205/

  - Incompatible among LanguageTool@6 and lucene-gosen@5 from omegat-org
  https://sourceforge.net/p/omegat/bugs/1204/

  - Integration test(docker) failure with 503
  https://sourceforge.net/p/omegat/bugs/1199/

  - Option-arrow not working in arm macOS
  https://sourceforge.net/p/omegat/bugs/1197/

  - Content of notes elements are not displayed correctly with Xliff filter
  https://sourceforge.net/p/omegat/bugs/1192/

  - ProjectFile has unwanted XML element otherAttributes
  https://sourceforge.net/p/omegat/bugs/1191/

  - If project memory is updated during load via tm/auto or tm/enforce, set project as modified
    so that save also updates project_save.tmx
  https://sourceforge.net/p/omegat/bugs/1185/

  - Languagetool crashes when reloading the project
  https://sourceforge.net/p/omegat/bugs/1182/

  - Stardict dictionary displays apostrophe as html entity code
  https://sourceforge.net/p/omegat/bugs/1181/

  - Font does not scale on HiDPI display on Linux